[gd_scene load_steps=3 format=3 uid="uid://dcvwegamjj0tc"]

[ext_resource type="Script" path="res://Levels/main_menu.gd" id="1_6yye6"]
[ext_resource type="Texture2D" uid="uid://dvynurqo5106m" path="res://assets/Background/Pink.png" id="2_jyfd1"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6yye6")
first_level_path = &"res://Levels/level_1.tscn"
credit_scene_path = &"res://Levels/credits.tscn"
main_menu_scene_path = &"res://Levels/main_menu.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.184314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jyfd1")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.5
offset_top = -281.0
offset_right = 234.5
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -179.5
offset_right = 212.0
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 55
alignment = 1

[node name="GameTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.509804, 0.509804, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Steve's Ninja Platform"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ContinueGame" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitGame")
focus_previous = NodePath("../QuitGame")
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="MainMenuGame" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitGame")
focus_previous = NodePath("../QuitGame")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="QuitGame" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ContinueGame")
focus_next = NodePath("../ContinueGame")
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/MainMenuGame" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
