[gd_scene load_steps=7 format=3 uid="uid://djwsem70r7rlr"]

[ext_resource type="Script" path="res://Levels/main_menu.gd" id="1_1muts"]
[ext_resource type="Texture2D" uid="uid://dvynurqo5106m" path="res://assets/Background/Pink.png" id="1_2meb0"]

[sub_resource type="InputEventKey" id="InputEventKey_dqi4u"]
device = -1
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_4dyd4"]
events = [SubResource("InputEventKey_dqi4u")]

[sub_resource type="InputEventKey" id="InputEventKey_0o364"]
device = -1
keycode = 81
unicode = 113

[sub_resource type="Shortcut" id="Shortcut_p5mtf"]
events = [SubResource("InputEventKey_0o364")]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1muts")
first_level_path = &"res://Levels/level_1.tscn"
credit_scene_path = &"res://Levels/credits.tscn"
main_menu_scene_path = &"res://Levels/main_menu.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2meb0")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.5
offset_top = -281.0
offset_right = 234.5
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -179.5
offset_right = 212.0
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 55
alignment = 1

[node name="GameTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.509804, 0.509804, 0.509804, 1)
theme_override_font_sizes/font_size = 40
text = "Steve's Ninja Platform"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartGame" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitGame")
focus_neighbor_bottom = NodePath("../Credits")
focus_next = NodePath("../Credits")
focus_previous = NodePath("../QuitGame")
theme_override_font_sizes/font_size = 30
shortcut = SubResource("Shortcut_4dyd4")
text = "Start Game"

[node name="Credits" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_bottom = NodePath("../QuitGame")
focus_next = NodePath("../QuitGame")
focus_previous = NodePath("../StartGame")
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="QuitGame" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Credits")
focus_neighbor_bottom = NodePath("../StartGame")
focus_next = NodePath("../StartGame")
focus_previous = NodePath("../Credits")
theme_override_font_sizes/font_size = 30
shortcut = SubResource("Shortcut_p5mtf")
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
